24-grid-css-responsive/style.css
/* Core Styles */

body {
	margin: 0;
	font-family: Arial, Helvetica, sans-serif;
	background: #333;
	color: #fff;
	font-size: 1.1em;
	line-height: 1.5;
	text-align: center;
}

img {
	display: block;
	width: 100%;
	height: auto;
}

h1, h2, h3 {
	margin: 0;
	padding: 1em 0;
}

p {
	margin: 0;
	padding: 1em 0;
}

.btn {
	display: inline-block;
	background: #333;
	color: white;
	text-decoration: none;
	padding: 1em 2em;
	border: 1px solid #666;
	margin: .5em 0;
}

.btn:hover {
	background: #eaeaea;
	color: #333;
}

/*Header Showcase*/

#showcase {
	min-height: 450px;
	color: #fff;
	text-align: center;
}

#showcase .bg-image {
	position: absolute;
	background: #333 url('https://static.pexels.com/photos/248515/pexels-photo-248515.png');
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
	width: 100%;
	height: 450px;
	z-index: -1;
}

